Fix spacing in breadcrumbs

--- a/src/scss/_breadcrumbs.scss
+++ b/src/scss/_breadcrumbs.scss
@@ -15,7 +15,7 @@
       &::after {
         content: '/';
         display: inline-block;
-        margin: 0 .4rem 0 .3rem;
+        margin: 0 .3rem;
       }
     }
   }
